[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/scenes/boss.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/test/BossTestScene.gd" type="Script" id=2]

[node name="BossTestScene" type="Node2D"]
script = ExtResource( 2 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 200, 300 )

[node name="Sprite" type="Sprite" parent="Player"]
scale = Vector2( 0.5, 0.5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource( 1 )

[node name="Boss" parent="." instance=ExtResource( 1 )]
position = Vector2( 600, 300 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 400, 300 )
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="BossHealth" type="ProgressBar" parent="UI"]
margin_left = 400.0
margin_top = 50.0
margin_right = 700.0
margin_bottom = 70.0
value = 100.0

[node name="TestControls" type="VBoxContainer" parent="UI"]
margin_left = 50.0
margin_top = 50.0
margin_right = 250.0
margin_bottom = 200.0

[node name="DamageButton" type="Button" parent="UI/TestControls"]
margin_right = 200.0
margin_bottom = 40.0
text = "造成100点伤害"

[node name="RageButton" type="Button" parent="UI/TestControls"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 84.0
text = "进入狂暴模式"

[node name="DesperateButton" type="Button" parent="UI/TestControls"]
margin_top = 88.0
margin_right = 200.0
margin_bottom = 128.0
text = "进入绝望模式"

[sub_resource type="CircleShape2D" id=1]
radius = 16.0